--- a/src/components/Aboutme/Aboutme.css
+++ b/src/components/Aboutme/Aboutme.css
@@ -91,3 +91,52 @@
     background-clip: text;
     color: transparent;
 }
+
+@media (max-width:1365px) {
+    .container-info {
+        font-size: 1rem;
+    }
+    .container-info h1 {
+        font-size: 35px;
+    }
+    .aboutme-button {
+        font-size: 0.7rem
+    }
+}
+@media (max-width:965px) {
+    .container-aboutme {
+        flex-direction: column;
+        width: 100%;
+        margin: 0 0 0 0;
+    }
+}
+@media (max-width:875px) {
+    .container-personal-information {
+        display: grid;
+        grid-template-columns: 2fr;
+    } 
+}
+
+@media (max-width:665px) {
+    .aboutme-button {
+        width: 60%;
+    }
+    .aboutme {
+        grid-template-rows: 15% 75%;
+    }
+}
+
+@media (max-width:340px) {
+    .aboutme-title {
+        font-size: 40px;
+    }
+    .container-info {
+        font-size: 0.8rem;
+    }
+    .container-info h1 {
+        font-size: 25px;
+    }
+    .aboutme-button {
+        font-size: 0.6rem
+    }
+}
