--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,25 +2,24 @@
 @import "~slick-carousel/slick/slick-theme.css";
 .Projects-container {
   border: 2px solid #181818;
+  height: 100vh;
 }
 .Projects {
-  width: 70%;
-  margin: 8% 0 0 15%;
-  /* border: 2px solid black; */
+  /* width: 70%; */
 }
 .Projects-title {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    font-size: 50px;
-    font-family: 'Quicksand', sans-serif;
-    color: #fff;
-    /* margin-top: 15% ; */
-    /* border: 2px solid black */
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-size: 50px;
+  font-family: "Quicksand", sans-serif;
+  color: #fff;
+  margin-top: 5%;
+  /* border: 2px solid black */
 }
-.Projects-slider{
-  /* border: 2px solid black; */
-  margin: 10% 0 0 0;
+.Projects-slider {
+  margin: 10% 15% 0 15%;
+  /* border: 2px solid white */
 }
 
 .slide img {
@@ -40,21 +39,20 @@
 }
 
 .arrow {
-  /* background-color: #fff; */
   position: absolute;
   cursor: pointer;
-  z-index: 10;
+  z-index: 1;
   color: #fff;
   /* border: 2px solid white; */
 }
 
 .arrow svg {
-  transition: color 300ms;
   height: 50px;
   width: 50px;
 }
 
 .arrow svg:hover {
+  transition: 0.3s;
   color: #68edff;
 }
 
@@ -66,4 +64,62 @@
 .prev {
   left: 0%;
   top: 50%;
+}
+
+@media (max-width:1340px) {
+  .slide img {
+    width: 15rem;
+  }
+  .Projects-slider {
+    margin: 15% 15% 0 15%;
+  }
+  .next {
+    right: 40%;
+    top: 120%;
+  }
+  .prev {
+    left: 40%;
+    top: 120%;
+  }
+  
+}
+
+@media (max-width:1180px) {
+  .slide img {
+    width: 12rem;
+  }
+  .Projects-slider {
+    margin: 20% 10% 0 10%;
+  }
+  .next {
+    right: 30%;
+  }
+  .prev {
+    left: 30%;
+  }
+}
+
+@media (max-width:780px) {
+  .slide img {
+    width: 12rem;
+  }
+  .Projects-slider {
+    margin: 25% 0 0 0;
+  }
+  .next {
+    right: 30%;
+  }
+  .prev {
+    left: 30%;
+  }
+}
+
+@media (max-width:545px) {
+  .Projects-slider {
+    margin: 50% 0 0 0;
+  }
+  .slide img {
+    width: 8rem;
+    margin: 0 auto;
+  }
 }
