--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -2,7 +2,8 @@
     display: grid;
     grid-template-rows: 20% 60% ;
     height: 100vh;
-    /* border: 2px solid black; */
+    width: 100vw;
+    /* border: 2px solid white; */
     justify-content:center ;
     align-items: center;
 }
@@ -17,18 +18,18 @@
 }
 .Skills-text {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     /* border: 2px solid black; */
 }
 
-.Skills-top, .Skills-bottom{
+.Skills-1, .Skills-2, .Skills-3{
     display: flex;
-    width: 70vw;
+    flex-direction: column;
+    width: 100%;
     align-items: center;
     justify-content: center;
-    margin: -8% 0 -8% 0;
+    padding: 5%;
     /* border: 2px solid black; */
 }
 .Skills-one {
@@ -37,10 +38,9 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    width: 10%;
-    margin: 10%;
     font-family: 'Quicksand', sans-serif;
     font-size: 2rem;
+    padding: 5%;
 }
 
 .html, .css, .js, .react, .mongo, .node {
@@ -84,4 +84,48 @@
 .node {
     background-color: #B2CFAE ;
     color: #71D861;
+}
+
+@media (max-width:1170px){
+    .html, .css, .js, .react, .mongo, .node {
+        height: 10rem;
+        width: 10rem;
+        font-size: 80px;
+    }
+    .Skills-one {
+        font-size: 1.5rem ;
+    }
+    .counter {
+        font-size: 1.3rem;
+    }
+}
+
+@media (max-width:775px){
+    .html, .css, .js, .react, .mongo, .node {
+        height: 6rem;
+        width: 6rem;
+        font-size: 50px;
+    }
+    .Skills-one {
+        font-size: 1.2rem ;
+        padding-bottom: 100%;
+    }
+    .counter {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:360px) {
+    .html, .css, .js, .react, .mongo, .node {
+        height: 4rem;
+        width: 4rem;
+        font-size: 30px;
+    }
+    .Skills-one {
+        font-size: 1.2rem ;
+        padding: 0 0 0 0;
+    }
+    .counter {
+        font-size: 1rem;
+    }
 }
