--- a/src/components/Aboutme/Aboutme.css
+++ b/src/components/Aboutme/Aboutme.css
@@ -1,142 +1,149 @@
 .aboutme {
-    display: grid;
-    grid-template-rows: 30% 60%;
-    height: 100vh;
-    /* border: 2px solid black; */
-    justify-content:center ;
-    align-items: center;
+  display: grid;
+  grid-template-rows: 30% 60%;
+  height: 100vh;
+  /* border: 2px solid black; */
+  justify-content: center;
+  align-items: center;
 }
 .aboutme-title {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    font-size: 50px;
-    font-family: 'Quicksand', sans-serif;
-    color: #fff;
-    /* border: 2px solid black; */
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-size: 50px;
+  font-family: "Quicksand", sans-serif;
+  color: #fff;
+  /* border: 2px solid black; */
 }
 .container-aboutme {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 65%;
-    margin: 0 0 0 20%;
-    /* border: 2px solid black; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 65%;
+  margin: 0 0 0 20%;
+  /* border: 2px solid black; */
 }
 .container-skills {
-    color: #fff;
-    height: 50%;
-    width: 50%;
-    /* border: solid 2px black; */
+  color: #fff;
+  height: 50%;
+  width: 50%;
+  /* border: solid 2px black; */
 }
 .container-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #fff;
-    height: 50%;
-    width: 50%;
-    color: #3DD1E7;
-    font-family: 'Quicksand', sans-serif;
-    font-size: 20px;
-    /* border: solid 2px black; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  height: 50%;
+  width: 50%;
+  color: #3dd1e7;
+  font-family: "Quicksand", sans-serif;
+  font-size: 20px;
+  /* border: solid 2px black; */
 }
 .container-info h1 {
-    font-size: 50px;
-    color: #323258;
+  font-size: 50px;
+  color: #323258;
 }
 .container-info h3 {
-    color: #3DD1E7;
+  color: #3dd1e7;
 }
 .container-info h5 {
-    color: #fff;
+  color: #fff;
 }
 .container-info span {
-    font-family: 'Anek Devanagari', sans-serif;
-    font-weight: bold;
-    color: #fff;
+  font-family: "Anek Devanagari", sans-serif;
+  font-weight: bold;
+  color: #fff;
 }
 .info-text {
-    color: #fff;
-    padding: 5% 0 5% 0;
+  color: #fff;
+  padding: 5% 0 5% 0;
 }
 .container-personal-information {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
-    padding: 2% 0 2% 0;
-    /* border: solid 2px black; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  list-style: none;
+  padding: 2% 0 2% 0;
+  /* border: solid 2px black; */
 }
 /* .aboutme-container-button {
     width: 20%;
 } */
 .aboutme-button {
-    align-items: center;
-    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-    border-radius: 8px;
-    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    color: #FFFFFF;
-    display: flex;
-    font-size: 15px;
-    font-family: 'Lato', sans-serif;
-    padding: 2%;
-    text-decoration: none;
-    cursor: pointer;
-    width: 30%;
-    justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  color: #ffffff;
+  display: flex;
+  font-size: 15px;
+  font-family: "Lato", sans-serif;
+  padding: 2%;
+  text-decoration: none;
+  cursor: pointer;
+  width: 30%;
+  justify-content: center;
 }
 .aboutme-button:hover {
-    transition: 1s;
-    background-image: linear-gradient(to right top, #0455cd, #5358df, #8259ed, #ad56f8, #d84fff);
-    background-clip: text;
-    color: transparent;
+  transition: 1s;
+  background-image: linear-gradient(
+    to right top,
+    #0455cd,
+    #5358df,
+    #8259ed,
+    #ad56f8,
+    #d84fff
+  );
+  background-clip: text;
+  color: transparent;
 }
 
-@media (max-width:1365px) {
-    .container-info {
-        font-size: 1rem;
-    }
-    .container-info h1 {
-        font-size: 35px;
-    }
-    .aboutme-button {
-        font-size: 0.7rem
-    }
+@media (max-width: 1365px) {
+  .container-info {
+    font-size: 1rem;
+  }
+  .container-info h1 {
+    font-size: 35px;
+  }
+  .aboutme-button {
+    font-size: 0.7rem;
+  }
 }
-@media (max-width:965px) {
-    .container-aboutme {
-        flex-direction: column;
-        width: 100%;
-        margin: 0 0 0 0;
-    }
+@media (max-width: 965px) {
+  .container-aboutme {
+    flex-direction: column;
+    width: 100%;
+    margin: 0 0 0 0;
+  }
 }
-@media (max-width:875px) {
-    .container-personal-information {
-        display: grid;
-        grid-template-columns: 2fr;
-    } 
-}
-
-@media (max-width:665px) {
-    .aboutme-button {
-        width: 60%;
-    }
-    .aboutme {
-        grid-template-rows: 15% 75%;
-    }
+@media (max-width: 875px) {
+  .container-personal-information {
+    display: grid;
+    grid-template-columns: 2fr;
+  }
 }
 
-@media (max-width:340px) {
-    .aboutme-title {
-        font-size: 40px;
-    }
-    .container-info {
-        font-size: 0.8rem;
-    }
-    .container-info h1 {
-        font-size: 25px;
-    }
-    .aboutme-button {
-        font-size: 0.6rem
-    }
+@media (max-width: 665px) {
+  .aboutme-button {
+    width: 60%;
+  }
+  .aboutme {
+    grid-template-rows: 15% 75%;
+  }
+}
+
+@media (max-width: 340px) {
+  .aboutme-title {
+    font-size: 40px;
+  }
+  .container-info {
+    font-size: 0.8rem;
+  }
+  .container-info h1 {
+    font-size: 25px;
+  }
+  .aboutme-button {
+    font-size: 0.6rem;
+  }
 }
