--- a/src/components/Aboutme/Aboutme.css
+++ b/src/components/Aboutme/Aboutme.css
@@ -75,11 +75,16 @@
   grid-template-columns: 1fr 1fr;
   list-style: none;
   padding: 2% 0 2% 0;
+
   /* border: solid 2px black; */
 }
 /* .aboutme-container-button {
     width: 20%;
 } */
+.container-2col li span a{
+  text-decoration: none;
+  color: white;
+}
 .aboutme-button {
   align-items: center;
   background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
