--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,7 +2,7 @@
 @import "~slick-carousel/slick/slick-theme.css";
 .Projects-container {
   border: 2px solid #181818;
-  height: 100vh;
+  /* height: 100vh; */
 }
 .Projects-title {
   display: flex;
@@ -15,13 +15,17 @@
   /* border: 2px solid black */
 }
 .Projects-slider {
-  margin: 10% 15% 0 15%;
+  margin: 5%;
   /* border: 2px solid white */
 }
-
+.projects-list {
+  display: none;
+}
 .slide img {
-  width: 20rem;
+  width: 400px;
+  height: 300px;
   margin: 0 auto;
+  border-radius: 30px;
 }
 
 .slide {
@@ -38,7 +42,7 @@
 .arrow {
   position: absolute;
   cursor: pointer;
-  /* z-index: 1; */
+  z-index: 1;
   color: #fff;
   /* border: 2px solid white; */
 }
@@ -63,12 +67,13 @@
   top: 50%;
 }
 
-@media (max-width: 1340px) {
+/* @media (max-width: 1340px) {
   .slide img {
-    width: 15rem;
+    width: 300px;
+    height: 200px;
   }
   .Projects-slider {
-    margin: 15% 15% 0 15%;
+    margin: 15%;
   }
   .next {
     right: 40%;
@@ -78,11 +83,11 @@
     left: 40%;
     top: 120%;
   }
-}
-
+} */
+/*
 @media (max-width: 1180px) {
-  .slide img {
-    width: 12rem;
+  .slick{
+    display: none !important;
   }
   .Projects-slider {
     margin: 20% 10% 0 10%;
@@ -96,9 +101,6 @@
 }
 
 @media (max-width: 780px) {
-  .slide img {
-    width: 12rem;
-  }
   .Projects-slider {
     margin: 50% 0 0 0;
   }
@@ -114,14 +116,27 @@
   .Projects-slider {
     margin: 50% 0 0 0;
   }
-  .slide img {
-    width: 8rem;
-    margin: 0 auto;
-  }
 }
 
 @media (max-height: 780px) {
   .Projects {
     display: block;
+  }
+} */
+
+@media (max-width:1180px) {
+  .Projects-slider {
+    display: none;
+  }
+  .projects-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  .projects-list img {
+    width: 400px;
+    height: 300px;
   }
 }
